# HSP-RPOSC-Redpitaya-Oszilloskop

./: .gitattributes  .gitignore  Bug-Toolliste.txt  README.md  Stundenliste-MichaelSchneider.xlsx  TODO.md  _main.cpp  buildDeploy.sh  package-lock.json
AbgabeCD/Quellcode/LibTests/test/: CMakeLists.txt  main.cpp  uartTestData.h
LibsigrokdecodeTests/test/: CMakeLists.txt  main.cpp
RP-LogicAnalyzerEclipse/externalRedpitaya/include/loguru/: CMakeLists.txt
RPOSC-LogicAnalyser/lib/loguru/: CMakeLists.txt
mini/: CMakeLists.txt
mini/externalRedpitaya/include/arm-linux-gnueabihf/python3.5m/: pyconfig.h
mini/externalRedpitaya/include/glib-2.0/gio/: gasyncresult.h  gfileattribute.h  gfileenumerator.h  glistmodel.h  gnotification.h  gpropertyaction.h  gproxy.h  gsettingsbackend.h  gsimpleproxyresolver.h  gsocketconnection.h  gsocketlistener.h  gsrvtarget.h
mini/externalRedpitaya/include/glib-2.0/glib/: gbase64.h  gchecksum.h  gdatetime.h  ghook.h  glib-autocleanups.h  gversion.h
mini/externalRedpitaya/include/loguru/: CMakeLists.txt  loguru.hpp
mini/externalRedpitaya/lib/arm-linux-gnueabihf/: libarchive.so.13.1.2  libcc1.so.0  libcurl-gnutls.so.3  libpython3.5m.so.1
mini/externalRedpitaya/lib/arm-linux-gnueabihf/perl-base/: XSLoader.pm  base.pm  vars.pm
mini/externalRedpitaya/lib/arm-linux-gnueabihf/pkgconfig/: form.pc  libpcreposix.pc
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/: 10.2-2020.11-x86_64-arm-none-linux-gnueabihf-manifest.txt
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/arm-none-linux-gnueabihf/lib/: libgomp.spec
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/arm-none-linux-gnueabihf/lib/ldscripts/: armelf.x  armelf.xde  armelf.xdwe  armelf.xn  armelf.xr  armelf.xu  armelf.xw  armelf.xwe  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdce  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelfb.xdc  armelfb.xsw  armelfb.xswe  armelfb.xw  armelfb_linux_eabi.xd  armelfb_linux_eabi.xs  armelfb_linux_eabi.xse
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/annotate/: Breakpoint-Info.html  Errors.html  Multi_002dthreaded-Apps.html  index.html
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/as.html/: AArch64-Floating-Point.html  AArch64-Syntax.html  AArch64_002dRelocations.html  ARC-Opcodes.html  ARM-Directives.html  ARM-Syntax.html  ARM_002dDependent.html  AS-Index.html  Alpha-Opcodes.html  Altmacro.html  Blackfin-Options.html  Bug-Reporting.html  Byte.html  COFF-Symbols.html  CR16-Operand-Qualifiers.html  CRIS_002dDependent.html  CRIS_002dPic.html  C_002dSKY-Syntax.html  C_002dSKY_002dDependent.html  Command-Line.html  Comments.html  D10V_002dRegs.html  D30V_002dDependent.html  D30V_002dGuarded.html  D30V_002dOpcodes.html  D30V_002dSyntax.html  End.html  Endfunc.html  Epiphany-Syntax.html  Extern.html  Fail.html  File.html  H8_002f300-Syntax.html  H8_002f300_002dAddressing.html  H8_002f300_002dChars.html  H8_002f300_002dDependent.html  H8_002f300_002dRegs.html  HPPA-Directives.html  Input-Files.html  Integers.html  (+75 more)
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/binutils.html/: Binutils-Index.html  Reporting-Bugs.html  Selecting-the-Target-System.html  Target-Selection.html  ar.html  debuginfod.html  elfedit.html  objcopy.html  size.html
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/gdb/: A-code-overlay.html  ARM.html  ARM_002dSpecific-Protocol-Details.html  Ada-Exception-GDB_002fMI-Catchpoint-Commands.html  Address-Locations.html  Aliases.html  Annotations-Overview.html  BSD-libkvm-Interface.html  Branch-Trace-Configuration-Format.html  Breakpoints-In-Guile.html  C-Constants.html  Commands-For-History.html  Console-I_002fO.html  Convenience-Vars.html  Custom-Debug-Info.html  Debugging-C.html  Debugging-Output.html  Edit.html  Exception-Handling.html  Fields-of-a-type-in-Guile.html  File-Caching.html  File_002dI_002fO-Examples.html  File_002dI_002fO-Overview.html  Filenames.html  Finish-Breakpoints-in-Python.html  Free-Software.html  GDB_002fMI-Ada-Exceptions-Commands.html  GDB_002fMI-Breakpoint-Commands.html  GDB_002fMI-Catchpoint-Commands.html  GDB_002fMI-Input-Syntax.html  GDB_002fMI-Program-Execution.html  GDB_002fMI-Symbol-Query.html  GDB_002fMI-Target-Manipulation.html  General-Bytecode-Design.html  Go.html  Host-and-target-files.html  Interrupted-System-Calls.html  Languages.html  Listing-Static-Tracepoint-Markers.html  M68K-Features.html  (+64 more)
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/gprof.html/: Invoking.html  Output.html  Sampling-Error.html  index.html
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/doc/ld.html/: BFD-outline.html  Canonical-format.html  Evaluation.html  Format-Commands.html  HIDDEN.html  Input-Section-Example.html  MIPS.html  NDS32.html  Orphan-Sections.html  PHDRS.html  PROVIDE_005fHIDDEN.html  Reporting-Bugs.html  Scripts.html  (+1 more)
mini/gcc-arm-10.2-2020.11-x86_64-arm-none-linux-gnueabihf/share/info/: annotate.info
mini/js/: chunk-vendors.d2ea3f5f.js.map
mini/src/: ACQChoosenOptions.cpp  Acquirer.cpp  Acquirer.hpp  SPContainer.hpp  main.cpp  main.h
(+5467 files in other folders)
